Pending changes exported from your codespace

--- a/exercício 12/exercício-12.html
+++ b/exercício 12/exercício-12.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css12.css">
 </head>
 <body id ="Fundo">
-    <a href="/Portfólio/index.html">voltar</a>
+    <a href="index.html">voltar</a>
     <h1>
         Decimo-Segundo Exercício
     </h1>
