Pending changes exported from your codespace

--- a/exercício 1/exercício-1.html
+++ b/exercício 1/exercício-1.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terceiro Exercicio</title>
-    <link rel="stylesheet" href="css3.css">
+    <title>Primeiro Exercício</title>
+    <link rel="stylesheet" href="css1.css">
 </head>
 <body>
-    <a href="/Portfólio/index.html">voltar</a>
+    <a href="/index.html">voltar</a>
     <h1>
-        Terceiro Exercício
+        Primeiro Exercício
     </h1>
-    <button onclick="Cal()">
-        Iniciar soma
+    <button onclick="somar()">
+        Iniciar somar
     </button>
     <div id="resultado">
         <p>
             Resultado:
         </p>
     </div>
-    <script src="script3.js">
+    <script src="script.js">
+
     </script>
 </body>
 </html>
