--- a/exercício 10/exercício-10.html
+++ b/exercício 10/exercício-10.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Decimo-Primeiro exercicio</title>
-    <link rel="stylesheet" href="css11.css">
+    <title>Decimo exercicio</title>
+    <link rel="stylesheet" href="css10.css">
 </head>
 <body>
-    <a href="/Portfólio/index.html">voltar</a>
+    <a href="/index.html">voltar</a>
     <h1>
-        Decimo-Pirmeiro Exercício
+        Decimo Exercício
     </h1>
     <h2 style="padding: 10px;">
-        <p>Contar do 10 ao 0</p>
+        <p>Contar do 0 ao 10</p>
     </h2>
     <button onclick="BotãoMais()">
         Iniciar a contagem
@@ -27,7 +27,7 @@
             Resultado:
         </p>
     </div>
-    <script src="script11.js">
+    <script src="script10.js">
     </script>
 </body>
 </html>
