--- a/exercício 2/exercício-2.html
+++ b/exercício 2/exercício-2.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css2.css">
 </head>
 <body>
-    <a href="/Portfólio/index.html">voltar</a>
+    <a href="/index.html">voltar</a>
     <h1>
         Segundo Exercício
     </h1>
