--- a/exercício 5/exercício-5.html
+++ b/exercício 5/exercício-5.html
@@ -3,27 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sexta exercicio</title>
-    <link rel="stylesheet" href="css6.css">
+    <title>Quinto exercicio</title>
+    <link rel="stylesheet" href="css5.css">
 </head>
 <body>
-    <a href="/Portfólio/index.html">voltar</a>
+    <a href="/index.html">voltar</a>
     <h1>
-        Sexto Exercício
+        Quinto Exercício
     </h1>
     <h2 style="padding: 10px;">
-        Inscrições para o campeonato
+        Adivinhe o número
     </h2>
-    <button onclick="Ins()">
-        Inscrever-se
+    <button onclick="AdNum()">
+        Tente um número
     </button>
-
+    <button onclick="window.location.reload(true);"> Reiniciar jogo</button>
     <div>
         <p id="resultado">
             Resultado:
         </p>
     </div>
-    <script src="script6.js">
+    <script src="script5.js">
     </script>
 </body>
 </html>
