--- a/exercício 7/exercício-7.html
+++ b/exercício 7/exercício-7.html
@@ -3,26 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nono exercicio</title>
-    <link rel="stylesheet" href="css8.css">
+    <title>Sétimo exercicio</title>
+    <link rel="stylesheet" href="css7.css">
 </head>
-<body id ="Fundo">
-    <a href="/Portfólio/index.html">voltar</a>
+<body>
+    <a href="/index.html">voltar</a>
     <h1>
-        Nono Exercício
+        Sétimo Exercício
     </h1>
     <h2 style="padding: 10px;">
-        Comparativos
+        Inscrições para o campeonato
     </h2>
-    <button onclick="Comp()">
+    <button onclick="BotãoMais()">
         Adicionar á contagem
     </button>
+
+    <button onclick="Re()">
+        Reiniciar contagem
+    </button>
+
     <div>
         <p id="resultado">
             Resultado:
         </p>
     </div>
-    <script src="script9.js">
+    <script src="script7.js">
     </script>
 </body>
 </html>
