--- a/exercício 8/exercício-8.html
+++ b/exercício 8/exercício-8.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quarto exercicio</title>
-    <link rel="stylesheet" href="css4.css">
+    <title>Oitavo exercicio</title>
+    <link rel="stylesheet" href="css8.css">
 </head>
-<body>
-    <a href="/Portfólio/index.html">voltar</a>
+<body id ="Fundo">
+    <a href="/index.html">voltar</a>
     <h1>
-        Quarto Exercício
+        Oitavo Exercício
     </h1>
     <h2 style="padding: 10px;">
-        Calculo de média
+        Inscrições para o campeonato
     </h2>
-    <button onclick="CalMe()">
-        Calcular média
+    <button onclick="Estação()">
+        Adicionar á contagem
     </button>
     <div>
         <p id="resultado">
             Resultado:
         </p>
     </div>
-    <script src="script4.js">
+    <script src="script8.js">
     </script>
 </body>
 </html>
