--- a/exercício 9/exercício-9.html
+++ b/exercício 9/exercício-9.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oitavo exercicio</title>
+    <title>Nono exercicio</title>
     <link rel="stylesheet" href="css8.css">
 </head>
 <body id ="Fundo">
-    <a href="/Portfólio/index.html">voltar</a>
+    <a href="/index.html">voltar</a>
     <h1>
-        Oitavo Exercício
+        Nono Exercício
     </h1>
     <h2 style="padding: 10px;">
-        Inscrições para o campeonato
+        Comparativos
     </h2>
-    <button onclick="Estação()">
+    <button onclick="Comp()">
         Adicionar á contagem
     </button>
     <div>
@@ -22,7 +22,7 @@
             Resultado:
         </p>
     </div>
-    <script src="script8.js">
+    <script src="script9.js">
     </script>
 </body>
 </html>
