--- a/index.html
+++ b/index.html
@@ -19,58 +19,68 @@
         <ul>
             <div class="Alinhamento">
                 <li>
-                    <a href="/Portfólio/exercício 1/exercício-1.html" class="titulo">
+                    <a href="/exercício 1/exercício-1.html" class="titulo">
                         Exercício 1 - "Soma e Comparativo"
                     </a>
                 </li>
                 <li>
-                    <a href="/Portfólio/exercício 2/exercício-2.html" class="titulo">
+                    <a href="/exercício 2/exercício-2.html" class="titulo">
                         Exercício 2 - "Descobrir o aniversário"
                     </a>
                 </li>
                 <li>
-                    <a href="/Portfólio/exercício 3/exercício-3.html" class="titulo">
-                        Exercício 3 - ""
+                    <a href="/exercício 3/exercício-3.html" class="titulo">
+                        Exercício 3 - "Calculadora"
                     </a>
                 </li>
                 <li>
-                    <a href="/Portfólio/exercício 4/exercício-4.html" class="titulo">
-                        Exercício 4 - "Soma e Comparativo"
+                    <a href="/exercício 4/exercício-4.html" class="titulo">
+                        Exercício 4 - "Calcular media"
                     </a>
                 </li>
                 <li>
-                    <a href="/Portfólio/exercício 5/exercício-5.html" class="titulo">
-                        Exercício 5 - "Soma e Comparativo"
+                    <a href="/exercício 5/exercício-5.html" class="titulo">
+                        Exercício 5 - "Jogo de números aleatorios"
                     </a>
                 </li>
                 <li>
-                    <a href="/Portfólio/exercício 6/exercício-6.html" class="titulo">
-                        Exercício 6 - "Soma e Comparativo"
+                    <a href="/exercício 6/exercício-6.html" class="titulo">
+                        Exercício 6 - "Inscrição campeonato de basquete"
                     </a>
                 </li>
                 <li>
-                    <a href="/Portfólio/exercício 7/exercício-7.html" class="titulo">
-                        Exercício 7 - "Soma e Comparativo"
+                    <a href="/exercício 7/exercício-7.html" class="titulo">
+                        Exercício 7 - "Botão"
                     </a>
                 </li>
                 <li>
-                    <a href="/Portfólio/exercício 8/exercício-8.html" class="titulo">
-                        Exercício 8 - "Soma e Comparativo"
+                    <a href="/exercício 8/exercício-8.html" class="titulo">
+                        Exercício 8 - "Estações do ano"
                     </a>
                 </li>
                 <li>
-                    <a href="/Portfólio/exercício 9/exercício-9.html" class="titulo">
-                        Exercício 9 - "Soma e Comparativo"
+                    <a href="/exercício 9/exercício-9.html" class="titulo">
+                        Exercício 9 - "Comparação motivacional"
                     </a>
                 </li>
                 <li>
-                    <a href="/Portfólio/exercício 10/exercício-10.html" class="titulo">
+                    <a href="/exercício 10/exercício-10.html" class="titulo">
                         Exercício 10 - "contagem progressiva ao 10"
                     </a>
                 </li>
                 <li>
-                    <a href="/Portfólio/exercício 11/exercício-11.html" class="titulo">
+                    <a href="/exercício 11/exercício-11.html" class="titulo">
                         Exercício 11 - "contagem regressiva ao 0"
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="titulo">
+                        Exercício 12 - "--------------"
+                    </a>
+                </li>
+                <li>
+                    <a href="/exercício 13/exercício-13.html" class="titulo">
+                        Exercício 13 - "Inserir números"
                     </a>
                 </li>
             </div>
