--- a/exercício 11/exercício-11.html
+++ b/exercício 11/exercício-11.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sétimo exercicio</title>
-    <link rel="stylesheet" href="css7.css">
+    <title>Decimo-Primeiro exercicio</title>
+    <link rel="stylesheet" href="css11.css">
 </head>
 <body>
-    <a href="/Portfólio/index.html">voltar</a>
+    <a href="/index.html">voltar</a>
     <h1>
-        Sétimo Exercício
+        Decimo-Pirmeiro Exercício
     </h1>
     <h2 style="padding: 10px;">
-        Inscrições para o campeonato
+        <p>Contar do 10 ao 0</p>
     </h2>
     <button onclick="BotãoMais()">
-        Adicionar á contagem
+        Iniciar a contagem
     </button>
 
     <button onclick="Re()">
@@ -27,7 +27,7 @@
             Resultado:
         </p>
     </div>
-    <script src="script7.js">
+    <script src="script11.js">
     </script>
 </body>
 </html>
