--- a/exercício 3/exercício-3.html
+++ b/exercício 3/exercício-3.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primeiro Exercício</title>
-    <link rel="stylesheet" href="css1.css">
+    <title>Terceiro Exercicio</title>
+    <link rel="stylesheet" href="css3.css">
 </head>
 <body>
-    <a href="/Portfólio/index.html">voltar</a>
+    <a href="/index.html">voltar</a>
     <h1>
-        Primeiro Exercício
+        Terceiro Exercício
     </h1>
-    <button onclick="somar()">
-        Iniciar somar
+    <button onclick="Cal()">
+        Iniciar soma
     </button>
     <div id="resultado">
         <p>
             Resultado:
         </p>
     </div>
-    <script src="script.js">
-
+    <script src="script3.js">
     </script>
 </body>
 </html>
