--- a/exercício 6/exercício-6.html
+++ b/exercício 6/exercício-6.html
@@ -3,27 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quinto exercicio</title>
-    <link rel="stylesheet" href="css5.css">
+    <title>Sexta exercicio</title>
+    <link rel="stylesheet" href="css6.css">
 </head>
 <body>
-    <a href="/Portfólio/index.html">voltar</a>
+    <a href="/index.html">voltar</a>
     <h1>
-        Quinto Exercício
+        Sexto Exercício
     </h1>
     <h2 style="padding: 10px;">
-        Adivinhe o número
+        Inscrições para o campeonato
     </h2>
-    <button onclick="AdNum()">
-        Tente um número
+    <button onclick="Ins()">
+        Inscrever-se
     </button>
-    <button onclick="window.location.reload(true);"> Reiniciar jogo</button>
+
     <div>
         <p id="resultado">
             Resultado:
         </p>
     </div>
-    <script src="script5.js">
+    <script src="script6.js">
     </script>
 </body>
 </html>
